--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.4",
+    "react-date-picker": "^7.4.0",
+    "react-datepicker": "^2.2.0",
+    "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "reactstrap": "^7.1.0",
+    "recharts": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
