--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.4",
     "react-number-format": "^4.0.7",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.1.1",
     "reactstrap": "^7.1.0",
     "recharts": "^1.5.0"
   },
